--- a/index.html
+++ b/index.html
@@ -6,12 +6,16 @@
     <title>目录</title>
 </head>
 <body>
-    这里已聚合 48 个博客、8572 篇博文，跨越十多年的时光。同步、网页内容生成等源码都
+    这里已聚合 48 个博客、8574 篇博文，跨越十多年的时光。同步、网页内容生成等源码都
     <a href="https://gitee.com/zhishi/collection-of-chinese-blogs/tree/master/%E5%8E%9F%E5%9E%8B">在此</a>
 
     <input id="搜索" type="text" placeholder="找找···">
 
     <ol>
+
+<li><a href=kexizeroing.github.io/A%20basic%20Dockerfile%20and%20Intro%20to%20Kubernetes.html>2024-07-08 A basic Dockerfile and Intro to Kubernetes</a></li>
+
+<li><a href=gitee.com/Kenneth-Lee-2012/MySummary/%E5%90%8D%E7%A7%B0%E7%A9%BA%E9%97%B4%E7%9A%84%E4%B8%80%E7%82%B9%E5%BF%83%E5%BE%97.html>2024-07-08 名称空间的一点心得</a></li>
 
 <li><a href=yuanj.top/%E6%9C%8D%E5%8A%A1%E5%99%A8%E4%B8%8A%E7%9A%84%E4%B8%80%E6%8F%BD%E5%AD%90%E6%9C%8D%E5%8A%A1.html>2024-07-05 服务器上的一揽子服务</a></li>
 
@@ -262,6 +266,8 @@
 <li><a href=gitee.com/Kenneth-Lee-2012/MySummary/%E5%87%A0%E4%B8%AA%E6%93%8D%E4%BD%9C%E7%B3%BB%E7%BB%9F%E5%AE%9E%E9%AA%8C.html>2024-04-11 几个操作系统实验</a></li>
 
 <li><a href=conge.livingwithfcs.org/%E6%96%B0%E7%88%B8%E4%BA%94%E5%B9%B4%E8%AE%A1%E5%88%92%20-%20355%20%E5%B7%A7%E5%90%88.html>2024-04-11 新爸五年计划 - 355 巧合</a></li>
+
+<li><a href=qingbob.com/%E6%88%91%E5%85%A5%E9%97%A8%E4%BA%86%E4%B8%80%E9%A1%B9%E6%96%B0%E6%8A%80%E6%9C%AF%EF%BC%8C%E7%84%B6%E5%90%8E%E5%91%A2.html>2024-04-11 我入门了一项新技术，然后呢</a></li>
 
 <li><a href=qingbob.com/%E6%88%91%E5%81%9A%E4%BA%86%E4%B8%80%E6%AC%BE%E5%8F%91%E7%8E%B0%E6%92%AD%E5%AE%A2%E7%9A%84%E5%B7%A5%E5%85%B7.html>2024-04-11 我做了一款发现播客的工具</a></li>
 
@@ -1692,8 +1698,6 @@
 <li><a href=gitee.com/Kenneth-Lee-2012/MySummary/%E4%BB%80%E4%B9%88%E6%98%AF%E6%9E%B6%E6%9E%84%E8%AE%BE%E8%AE%A12023.html>2023-03-13 什么是架构设计2023</a></li>
 
 <li><a href=conge.livingwithfcs.org/%E6%96%B0%E7%88%B8%E4%BA%94%E5%B9%B4%E8%AE%A1%E5%88%92%20%7C%20297%20%E5%A5%B3%E5%84%BF%E6%89%93%E5%9C%B0%E9%93%BA.html>2023-03-13 新爸五年计划 | 297 女儿打地铺</a></li>
-
-<li><a href=kexizeroing.github.io/A%20Dockerfile%20for%20a%20NodeJS%20application.html>2023-03-12 A Dockerfile for a NodeJS application</a></li>
 
 <li><a href=gitee.com/Kenneth-Lee-2012/MySummary/%E3%80%8A%E7%BF%A6%E5%95%86%E3%80%8B%E8%AF%BB%E4%B9%A6%E7%AC%94%E8%AE%B0.html>2023-03-12 《翦商》读书笔记</a></li>
 
