--- a/gitee.com/Kenneth-Lee-2012/MySummary/天下皆谓我道大.html
+++ b/gitee.com/Kenneth-Lee-2012/MySummary/天下皆谓我道大.html
@@ -26,7 +26,7 @@
   而居于无迹，犹贤于“肖”迹以失真乎！不然，“天将救之，以慈卫之”；苻坚不忍于慕容，
   而不救其死，非以其求“肖”也哉？</p>
 <p>这里我读的版本是“若肖，不久矣”，我认为我那个版本是对的。这里上下文明显是说肖是
-各表面样子的假把式，怎么可能说它久呢。王夫之自己也没去解释这东西，说明他要不是
+个表面样子的假把式，怎么可能说它久呢。王夫之自己也没去解释这东西，说明他要不是
 笔误，要不是别人抄错了。</p>
 <h1>善为士者</h1>
 <p>::</p>
@@ -125,7 +125,7 @@
   心，于杀有喜心者，于天下未有损，而徒自剥其和也。圣人知理势之且然，故哀天而目
   击夫化。化日迁而不得不听，听化而哀之也抑深矣。岂求以近仁名邪？近仁名者，是有
   司生者而代之生也。代之生，代之杀，皆愚也。圣人终不为愚，故似不肖。</p>
-<p>鸡汤，王都不敢碰为什么“民不畏死”。</p>
+<p>鸡汤，王（夫之）都不敢碰为什么“民不畏死”。</p>
 <h1>民之饥</h1>
 <p>::</p>
 <p>民之饥，以其上食税之多，是以饥。
