--- a/kexizeroing.github.io/Curated link collection.html
+++ b/kexizeroing.github.io/Curated link collection.html
@@ -243,6 +243,7 @@ top: true</p>
 <p>An AI chatbot in Win95 style: <a href="https://wingpt.vercel.app">https://wingpt.vercel.app</a></p>
 <p>A Webapp that uses RAG to interact with a PDF directly in the browser: <a href="https://pdf.nico.dev">https://pdf.nico.dev</a></p>
 <p>High-Performance In-Browser LLM Inference Engine: <a href="https://github.com/mlc-ai/web-llm">https://github.com/mlc-ai/web-llm</a></p>
+<p>Fast AI voice assistant: <a href="https://github.com/ai-ng/swift">https://github.com/ai-ng/swift</a></p>
 <hr/>
 <h2>Machine Learning</h2>
 <p>Gain the skills you need to do independent data science projects: <a href="https://www.kaggle.com/learn">https://www.kaggle.com/learn</a></p>
