--- a/young-lord.github.io/使用 Caddy 搭建 WebDAV 服务器（Windows, Linux 等全平台通用）.html
+++ b/young-lord.github.io/使用 Caddy 搭建 WebDAV 服务器（Windows, Linux 等全平台通用）.html
@@ -1,9 +1,9 @@
-<h2><a href="https://github.com/Young-Lord/Young-Lord.github.io/blob/master/_posts/2023-09-15-%E4%BD%BF%E7%94%A8Caddy%E6%90%AD%E5%BB%BAWebDAV%E6%9C%8D%E5%8A%A1%E5%99%A8%EF%BC%88Windows,Linux%E7%AD%89%E5%85%A8%E5%B9%B3%E5%8F%B0%E9%80%9A%E7%94%A8%EF%BC%89.md">仓库源文</a>，<a href="https://young-lord.github.io/posts/caddy-webdav">站点原文</a></h2>
+<h2><a href="https://github.com/Young-Lord/Young-Lord.github.io/blob/master/_posts/2023-09-15-使用Caddy搭建WebDAV服务器（Windows,Linux等全平台通用）.md">仓库源文</a>，<a href="https://young-lord.github.io/posts/caddy-webdav">站点原文</a></h2>
 <hr/>
-<h2>tags: [Caddy, WebDAV]
+<p>tags: [Caddy, WebDAV]
 title: 使用 Caddy 搭建 WebDAV 服务器（Windows, Linux 等全平台通用）
-slug: caddy-webdav
-last_modified_at: 2024-1-7</h2>
+slug: caddy-webdav</p>
+<h2>last_modified_at: 2024-7-6</h2>
 <h2>前言</h2>
 <p>IIS的WebDAV太烂，于是有了本博文。以下步骤使用的环境为Windows Server 2012 R2。</p>
 <h2>安装</h2>
@@ -11,65 +11,78 @@ last_modified_at: 2024-1-7</h2>
 <p>先<a href="https://caddyserver.com/download">在官方页面下载</a>Caddy可执行文件，记得下载前选中<code>mholt/caddy-webdav</code>这一插件。
 把这个文件重命名为<code>caddy.exe</code>后丢到这里：<code>C:\Program Files\Caddy\caddy.exe</code></p>
 <h3>自启动</h3>
-<blockquote>
-<p>这一步使用<a href="https://nssm.cc/">NSSM</a>也可以，而且更简单，更强大。</p>
+<blockquote><p>这一步使用<a href="https://nssm.cc/">NSSM</a>也可以，而且更简单，更强大。</p>
 </blockquote>
 <p>根据<a href="https://caddyserver.com/docs/running#windows-service">官方教程</a>，安装为服务：</p>
 <p>CMD写法：</p>
-<pre><code class="language-bat">sc.exe create caddy start= auto binPath= "\"C:\Program Files\Caddy\caddy.exe\" run"
+<pre><code class="lang-bat">sc.exe create caddy start= auto binPath= "\"C:\Program Files\Caddy\caddy.exe\" run"
 </code></pre>
 <p>Powershell写法：</p>
-<pre><code class="language-powershell">New-Service -Name "caddy" -StartupType Automatic -BinaryPathName '"C:\Program Files\Caddy\caddy.exe" run'
+<pre><code class="lang-powershell">New-Service -Name "caddy" -StartupType Automatic -BinaryPathName '"C:\Program Files\Caddy\caddy.exe" run'
 </code></pre>
-<blockquote>
-<p>路径不加引号的话会有个<a href="https://cloud.tencent.com/developer/article/2120444">漏洞</a>，好孩子不要学。</p>
+<blockquote><p>路径不加引号的话会有个<a href="https://cloud.tencent.com/developer/article/2120444">漏洞</a>，好孩子不要学。</p>
 </blockquote>
 <h3>Caddyfile</h3>
 <p>把以下文件丢到和<code>caddy.exe</code>同一目录下即可</p>
-<pre><code class="language-plain">{
-	order webdav last
+<pre><code class="lang-plain">{
+    order webdav last
 }
 :53091 {
-	handle_path /files/* {
-		file_server browse
-	}
-	redir /files /files/
+    # handle_path /files/* {
+    #   file_server browse
+    # }
+    # redir /files /files/
 
-	handle /webdav/* {
-		webdav {
-			root E:/ftp
-			prefix /webdav
-		}
-	}
-	redir /webdav /webdav/
+    handle /webdav/* {
+        webdav {
+            root E:/ftp
+            prefix /webdav
+        }
+    }
+    redir /webdav /webdav/
 
-	basicauth /webdav/* {
-		ftp $2a$14$2YDpvmb4hf8Q0GLx8TJw8eQoa4qvkpaKbYHa0RLv5J4IHzdeVTVkG
-	}
+    basicauth /webdav/* {
+        ftp $2a$14$2YDpvmb4hf8Q0GLx8TJw8eQoa4qvkpaKbYHa0RLv5J4IHzdeVTVkG
+    }
 }
 </code></pre>
 <p>具体来说：</p>
 <ul>
 <li><code>:53091</code>：绑定到<code>0.0.0.0:53091</code></li>
-<li><code>handle_path /files/*</code>：在<code>/files</code>路径下显示一个Web页面用于浏览器访问</li>
-<li><code>handle /webdav/*</code>：在<code>/webdav</code>路径下处理<code>WebDAV</code>服务，根目录为<code>E:/ftp</code>（如果用中文文件名，记得要用<code>UTF-8</code>编码保存文件）</li>
+<li><code>handle_path /files/*</code>：在<code>/files</code>路径下显示一个Web页面，用于浏览器访问。与WebDAV功能无关，但可以用于快速确认防火墙配置是否正确、Caddy是否正常运行等。</li>
+<li><code>handle /webdav/*</code>：在<code>/webdav</code>路径下处理<code>WebDAV</code>服务，根目录为<code>E:/ftp</code>（如果用中文文件名，记得要用<code>UTF-8</code>编码保存文件）（此处注意路径分隔符必须用<code>/</code>而非<code>\</code>）</li>
 <li><code>basicauth /webdav/*</code>：只允许用户名为<code>ftp</code>、密码为<code>pwd123</code>的用户访问。这里的密码已经hash过，可以使用<code>caddy hash-password</code>生成。</li>
 </ul>
+<h3>ACL（更高级的分用户权限控制）</h3>
+<p>不好意思没有，需要的可以使用<a href="https://github.com/hacdias/caddy-v1-webdav">Caddy 1的类似插件</a>。（<a href="https://github.com/mholt/caddy-webdav/issues/15">相关issue</a>）</p>
 <h2>使用</h2>
 <h3>Windows</h3>
-<p>首先解除一些限制<a href="%5Bwin10%E5%8E%9F%E7%94%9Fwebdav%E8%AE%BE%E7%BD%AE%E7%9A%84%E9%97%AE%E9%A2%98%5D(https://juejin.cn/post/6992463338160521230)">^1</a>：</p>
-<pre><code class="language-bat">reg add HKEY_LOCAL_MACHINE\SYSTEM\CurrentControlSet\Services\WebClient\Parameters /v BasicAuthLevel /t REG_DWORD /d 2 /f
+<h5>使用<code>rclone</code>（建议）</h5>
+<blockquote><p>参考链接：<sup class="footnote-ref" id="fnref-2"><a href="#fn-2">1</a></sup></p>
+</blockquote>
+<p>下载安装<a href="https://github.com/winfsp/winfsp/releases/latest">WinFsp</a>，下载<a href="https://github.com/rclone/rclone/releases/latest">rclone</a>，进入<code>rclone.exe</code>所在目录，随后按参考链接完成配置。</p>
+<p>&lt;del&gt;[FUSE](https://zhuanlan.zhihu.com/p/106719192): 遥遥领先！&lt;/del&gt;</p>
+<p>开机自启动可以用Windows服务（略），也可以直接用上一部分那个开机自启动脚本：</p>
+<p>把<code>.bat</code>文件里的内容进行如下更改（<a href="https://blog.xiaoz.org/archives/15519">关于参数的详细解释</a>）：</p>
+<pre><code class="lang-bat">chcp 65001
+pushd "C:\Program Files\rclone"
+rclone mount myftp:/ Z: --vfs-cache-mode full
+</code></pre>
+<p>（这里的 myftp 是 rclone 配置文件中的名称，Z: 是挂载的盘符，--vfs-cache-mode full 是启用缓存）</p>
+<p>然后应该就好了。Linux/macOS也可以用类似的方法，在此略去。</p>
+<h5>使用Windows内置工具（不建议）</h5>
+<p>首先解除一些限制<sup class="footnote-ref" id="fnref-1"><a href="#fn-1">2</a></sup>：</p>
+<pre><code class="lang-bat">reg add HKEY_LOCAL_MACHINE\SYSTEM\CurrentControlSet\Services\WebClient\Parameters /v BasicAuthLevel /t REG_DWORD /d 2 /f
 reg add HKEY_LOCAL_MACHINE\SYSTEM\CurrentControlSet\Services\WebClient\Parameters /v FileSizeLimitInBytes /t REG_DWORD /d 0xffffffff /f
 net stop webclient
 net start webclient
 </code></pre>
 <p>建议：编辑<code>C:\Windows\System32\drivers\etc\hosts</code>，加入一行<code>ftp.local 192.168.66.66</code>（根据实际情况更改）以更好同时挂载到同一个IP地址下的不同网络驱动器。如果这样做，下面的<code>192.168.66.66</code>也要对应改为<code>ftp.local</code></p>
-<h4>关于连接</h4>
-<h5>使用Windows自带的“映射网络驱动器”（不建议）</h5>
+<h6>内置工具 - “映射网络驱动器”（不建议）</h6>
 <p>右键“此电脑”，选择“映射网络驱动器”，文件夹写<code>http://192.168.66.66:53091/webdav</code>，勾选“使用其他凭据连接”。在弹出的登录提示中用户名输入“ftp”，密码输入“pwd123”。</p>
 <p>为什么不建议？这样做无法实现开机自动连接，而且每次都要弹出一次密码输入框（即使你已经选择了“记住凭据”）。</p>
-<h5>使用远古的<code>net use</code>命令（不建议）</h5>
-<pre><code class="language-bat">chcp 65001
+<h6>内置工具 - 远古的<code>net use</code>命令（不建议）</h6>
+<pre><code class="lang-bat">chcp 65001
 :TRY
 net use Z: http://192.168.66.66:53091/webdav /Persistent:Yes /USER:ftp pwd123 /Y 2&gt;&amp;1|find "找不到网络名"&gt;nul
 if %errorlevel%==0 (
@@ -80,23 +93,23 @@ if %errorlevel%==0 (
 )
 </code></pre>
 <p>把这货丢进一个<code>bat</code>文件里，比如<code>C:\Program Files\LoginAtStartup\connect-with-net.bat</code></p>
-<pre><code class="language-vb">DIM objShell 
+<pre><code class="lang-vb">DIM objShell 
 set objShell = wscript.createObject("wscript.shell") 
 iReturn = objShell.Run("cmd /c "&amp;chr(34)&amp;"C:\Program Files\LoginAtStartup\connect-with-net.bat"&amp;chr(34)&amp;"", 0, FALSE)
 </code></pre>
 <p>把这货丢进一个<code>vbs</code>文件里，再把它的快捷方式丢进<code>shell:startup</code>（也就是<code>C:\Users\%USERNAME%\AppData\Roaming\Microsoft\Windows\Start Menu\Programs\Startup</code>）下，就可以开机自动连接了。再次感叹一句Windows之屎。</p>
-<p>为什么不建议？这货打开文件时传参是**的<code>http://</code>开头的链接。</p>
-<h5>使用<code>rclone</code>（建议）</h5>
-<blockquote>
-<p>参考链接：<a href="%5B%E4%BD%BF%E7%94%A8rclone%E6%90%AD%E5%BB%BAwebdav%E5%AE%A2%E6%88%B7%E7%AB%AF%5D(https://www.bilibili.com/read/cv21803909/)">^2</a></p>
-</blockquote>
-<p>下载安装<a href="https://github.com/winfsp/winfsp/releases/latest">WinFsp</a>，下载<a href="https://github.com/rclone/rclone/releases/latest">rclone</a>，进入<code>rclone.exe</code>所在目录，随后按参考链接完成配置。</p>
-<p>&lt;del&gt;<a href="https://zhuanlan.zhihu.com/p/106719192">FUSE</a>: 遥遥领先！&lt;/del&gt;</p>
-<p>开机自启动可以用Windows服务（略），也可以直接用上一部分那个开机自启动脚本：</p>
-<p>把<code>.bat</code>文件里的内容进行如下更改（<a href="https://blog.xiaoz.org/archives/15519">关于参数的详细解释</a>）：</p>
-<pre><code class="language-bat">chcp 65001
-pushd "C:\Program Files\rclone"
-rclone mount myftp:/ Z: --vfs-cache-mode full
-</code></pre>
-<p>（这里的 myftp 是 rclone 配置文件中的名称，Z: 是挂载的盘符，--vfs-cache-mode full 是启用缓存）</p>
-<p>然后应该就好了。</p>
+<p>为什么不建议？这货打开文件时传参是<code>http://</code>开头的链接，没几个软件能用。</p>
+<h4>使用RaiDrive</h4>
+<p><a href="https://www.raidrive.com/">RaiDrive</a>专为挂载WebDAV等远程连接设计，提供了简单易用的图形化界面。缺点是资源占用较高，且若不付费，功能严重受限。</p>
+<h3>macOS</h3>
+<p>系统自带的“访达”就可以，详见<a href="https://support.apple.com/zh-cn/guide/mac-help/mchlp1546/mac">官方教程</a>。</p>
+<h3>Android</h3>
+<p>使用<a href="https://mt2.cn/download/">MT管理器</a>（需要付费）、<a href="https://foldersync.io/">FolderSync</a>（免费，有广告）均可，此处不展开。</p>
+<h3>iOS</h3>
+<p>参考：<a href="https://sspai.com/post/53942">用好 WebDAV，我是如何在 Windows 和手机之间传输文件的</a></p>
+<div class="footnotes">
+<hr/>
+<ol><li id="fn-2"><p><a href="https://www.bilibili.com/read/cv21803909/">使用rclone搭建webdav客户端</a><a class="footnote" href="#fnref-2">↩</a></p></li>
+<li id="fn-1"><p><a href="https://juejin.cn/post/6992463338160521230">win10原生webdav设置的问题</a><a class="footnote" href="#fnref-1">↩</a></p></li>
+</ol>
+</div>
