--- a/index.html
+++ b/index.html
@@ -6,12 +6,18 @@
     <title>目录</title>
 </head>
 <body>
-    这里已聚合 48 个博客、8574 篇博文，跨越十多年的时光。同步、网页内容生成等源码都
+    这里已聚合 48 个博客、8577 篇博文，跨越十多年的时光。同步、网页内容生成等源码都
     <a href="https://gitee.com/zhishi/collection-of-chinese-blogs/tree/master/%E5%8E%9F%E5%9E%8B">在此</a>
 
     <input id="搜索" type="text" placeholder="找找···">
 
     <ol>
+
+<li><a href=sund.site/RESTful%20Web%20Service%20Cookbook%20%E7%AC%94%E8%AE%B0.html>2024-07-13 RESTful Web Service Cookbook 笔记</a></li>
+
+<li><a href=sakurawald.github.io/how%20to%20fix%20corrupted%20packages%20in%20archlinux.html>2024-07-12 how to fix corrupted packages in archlinux</a></li>
+
+<li><a href=blog.mauve.icu/%E7%94%A8%20magic%20%E5%8F%98%E9%87%8F%E8%A7%A3%E5%86%B3%20UAF%20%E9%97%AE%E9%A2%98.html>2024-07-10 用 magic 变量解决 UAF 问题</a></li>
 
 <li><a href=kexizeroing.github.io/A%20basic%20Dockerfile%20and%20Intro%20to%20Kubernetes.html>2024-07-08 A basic Dockerfile and Intro to Kubernetes</a></li>
 
