--- a/kexizeroing.github.io/Curated link collection.html
+++ b/kexizeroing.github.io/Curated link collection.html
@@ -30,6 +30,7 @@ top: true</p>
 <p>90DaysOfDevOps: <a href="https://github.com/MichaelCade/90DaysOfDevOps">https://github.com/MichaelCade/90DaysOfDevOps</a></p>
 <p>Explain complex systems using visuals and simple terms: <a href="https://github.com/ByteByteGoHq/system-design-101">https://github.com/ByteByteGoHq/system-design-101</a></p>
 <p>Beginner's TypeScript tutorial: <a href="https://www.totaltypescript.com/tutorials">https://www.totaltypescript.com/tutorials</a></p>
+<p>Total TypeScript Essentials: <a href="https://www.totaltypescript.com/books/total-typescript-essentials">https://www.totaltypescript.com/books/total-typescript-essentials</a></p>
 <p>Why web tech is like this: <a href="https://www.youtube.com/watch?v=3QEoJRjxnxQ">https://www.youtube.com/watch?v=3QEoJRjxnxQ</a></p>
 <p>A year-end celebration of fundamental web technologies: <a href="https://12daysofweb.dev">https://12daysofweb.dev</a></p>
 <p>Babel Plugin Handbook: <a href="https://github.com/jamiebuilds/babel-handbook/blob/master/translations/en/plugin-handbook.md">https://github.com/jamiebuilds/babel-handbook/blob/master/translations/en/plugin-handbook.md</a></p>
@@ -153,7 +154,7 @@ top: true</p>
 <p>OCR PDFs and images directly in your browser: <a href="https://tools.simonwillison.net/ocr">https://tools.simonwillison.net/ocr</a></p>
 <p>Comlink makes WebWorkers enjoyable: <a href="https://github.com/GoogleChromeLabs/comlink">https://github.com/GoogleChromeLabs/comlink</a></p>
 <p>Web component JS frameworks overview by their syntax and features: <a href="https://component-party.dev">https://component-party.dev</a></p>
-<p>Javascript audio library for the modern web: <a href="https://github.com/goldfire/howler.js">https://github.com/goldfire/howler.js</a></p>
+<p>Open Source Tailwind components tailored for your AI and GPT: <a href="https://github.com/LangbaseInc/langui">https://github.com/LangbaseInc/langui</a></p>
 <hr/>
 <h2>React ecosystem</h2>
 <p>The Beginner's Guide to React: <a href="https://egghead.io/courses/the-beginner-s-guide-to-react">https://egghead.io/courses/the-beginner-s-guide-to-react</a> or <a href="https://www.youtube.com/watch?v=7_x4AuqHxlg">https://www.youtube.com/watch?v=7_x4AuqHxlg</a></p>
@@ -173,6 +174,8 @@ top: true</p>
 <p>Learn Next.js course by Vercel: <a href="https://nextjs.org/learn">https://nextjs.org/learn</a></p>
 <p>React's evolution from Hooks to Concurrent React: <a href="https://tigerabrodi.blog/reacts-evolution-from-hooks-to-concurrent-react">https://tigerabrodi.blog/reacts-evolution-from-hooks-to-concurrent-react</a></p>
 <p>Build Your Own React.js in 400 Lines of Code: <a href="https://webdeveloper.beehiiv.com/p/build-react-400-lines-code">https://webdeveloper.beehiiv.com/p/build-react-400-lines-code</a></p>
+<p>Zero-dependency and lightweight React implementation: <a href="https://github.com/MarufZak/react-simplified">https://github.com/MarufZak/react-simplified</a></p>
+<p>Modern UI components to build your React app: <a href="https://dotui.org">https://dotui.org</a></p>
 <hr/>
 <h2>Vue and Vite ecosystem</h2>
 <p>Updates, tips &amp; opinions from the maintainers of Vue.js: <a href="https://blog.vuejs.org">https://blog.vuejs.org</a></p>
@@ -244,6 +247,8 @@ top: true</p>
 <p>A Webapp that uses RAG to interact with a PDF directly in the browser: <a href="https://pdf.nico.dev">https://pdf.nico.dev</a></p>
 <p>High-Performance In-Browser LLM Inference Engine: <a href="https://github.com/mlc-ai/web-llm">https://github.com/mlc-ai/web-llm</a></p>
 <p>Fast AI voice assistant: <a href="https://github.com/ai-ng/swift">https://github.com/ai-ng/swift</a></p>
+<p>Starter project for the Vercel AI SDK RAG guide: <a href="https://github.com/vercel/ai-sdk-rag-starter">https://github.com/vercel/ai-sdk-rag-starter</a></p>
+<p>Build AI apps locally that can do document Q&amp;A: <a href="https://github.com/ykhli/local-ai-stack">https://github.com/ykhli/local-ai-stack</a></p>
 <hr/>
 <h2>Machine Learning</h2>
 <p>Gain the skills you need to do independent data science projects: <a href="https://www.kaggle.com/learn">https://www.kaggle.com/learn</a></p>
