--- a/young-lord.github.io/科学苗子游记.html
+++ b/young-lord.github.io/科学苗子游记.html
@@ -3,7 +3,7 @@
 <p>tags: [生活]
 title: 科学苗子游记
 slug: axis-2023</p>
-<h2>last_modified_at: 2024-5-12</h2>
+<h2>last_modified_at: 2024-7-10</h2>
 <p>多年以后，他会想起2023年1月1日凌晨，那个为Ubuntu Wayland上的腾讯会议配虚拟摄像头投屏的凌晨。</p>
 <h2>正文</h2>
 <h3>夏令营之前</h3>
@@ -11,7 +11,7 @@ slug: axis-2023</p>
 <p>接下来基本就是和队里的人准备你们的内容了。这边建议先打一个比较好的架构而非随便写个玩具，最好后面略微改动就能用，而不是像我们一样花了很长时间推翻重做。</p>
 <h3>吃住</h3>
 <p>住在深圳明德实验学校，宿舍条件相当烂，并且夜间断电。</p>
-<p>除了周末在明德，平时吃饭在南科大食堂。明德的饭基本是相当一般的盒饭，南科大可从米饭、肠粉到饺子、面条等菜品中任选，并每天领取饮料/水果。在明德的周末偶尔会举办一个pizza day，貌似总共有两次？</p>
+<p>除了周末在明德，平时吃饭在南科大食堂。明德的饭基本是相当一般的盒饭，会浪费很多。南科大可从米饭、肠粉到饺子、面条等菜品中任选，并每天领取饮料/水果。在明德的周末偶尔会举办一个pizza day，貌似总共有两次？</p>
 <p>开营、结营时会在腾讯滨海大厦吃饭，这个则相当香。</p>
 <p>在结题报告后，你可以享受人生最压抑的一顿饭，感受看着各位大佬导师欢快交流而自己一句话不敢说的尴尬。</p>
 <h3>科研</h3>
@@ -56,6 +56,22 @@ slug: axis-2023</p>
 <p>有个人给别人推荐机场却忘了加返利链接，是谁呢？</p>
 <h3>夏令营之后</h3>
 <p>我们组是花了近一个学期改程序、跑eval、写论文，并花了一周准备答辩，然后——就这样了。评奖结果是在寒假打Ingress的时候收到的，证书则是在开学后。</p>
+<h2>碎碎念：关于科研</h2>
+<p>老实说，在经历了这场科研活动后，我对“科研”的印象其实不是很好。尤其是作为一个也算搞了两三年开源的人，这里的氛围真的比我所接触到的开源社区差太多了。</p>
+<blockquote><p>这里只是我在过去一年里作为一个刚接触到科研的人所感受到的，可能较为偏激且绝对不客观，也许以后会来改。当然评论区提意见也是欢迎的。
+骂这么多不代表我以后一定不会在这方面工作，只是几年后再来看看这些论点还成不成立将是有趣的。</p>
+</blockquote>
+<h3>Paywall</h3>
+<p>我们读的论文大多是在<a href="https://dl.acm.org/about">ACM Digital Library</a>这种机构后面被保护起来，没有高等学府身份就看不到的。当然我们的助理导师作为北大博士可以把pdf发给我们，但假如没有这种人呢？Sci-Hub？其实并不完全行，鉴于它由于诉讼已经很久不更新了。</p>
+<h3>产出周期长，社区反馈少，eval高于一切</h3>
+<p>软件工程从来不是一个只看结果的学科。有些时候，一个创意或者一个MVP（最小可行产品）本身就有很大价值。这样的产品并不少见，比如<a href="https://github.com/fathyb/carbonyl">终端网页浏览器 Carbonyl</a>、<a href="https://typst.app">LaTeX替代品 Typst</a>（我们刚用的时候还只是一个雏形，一年后的今天已经可以取代LaTeX了。虽然是Rust写的，但并不难贡献，Jett的commit就被合并过）。而更清晰的例子是<a href="https://github.com/ishan0102/vimGPT">vimGPT</a>，和我们的“科研项目”几乎完全相同。整个codebase不过200行，没有eval（跑分） / peer review（同行评审），但效果比我们打磨了几个月的屎山好多了。</p>
+<h3>开源？</h3>
+<p>LMFAO.</p>
+<ul>
+<li><a href="https://www.thepaper.cn/newsDetail_forward_11658640">公开处刑：研究者自建Papers Without Code网站，张贴复现不了的论文</a></li>
+<li><a href="https://github.com/HumanAIGC">HumanAIGC - 某大厂的开源科研成果</a></li>
+</ul>
+<p>至于 最新最热Python虚拟环境管理器 / Written in Rust / Docker？能跑就不错了，哪来那种东西。相比之下，更多的是 版本混乱、路径硬编码、log缺失 的屎山。</p>
 <h2>后记</h2>
 <p><a href="https://music.163.com/#/song?id=528271233">We Want To Run - Frums</a></p>
 <p>暑假结束，开学不久以后，我偶然听到了这首Frums的歌，感觉到了某种触动，因此把它摆在了这里。</p>
