--- a/kexizeroing.github.io/Notes on work projects (in Chinese).html
+++ b/kexizeroing.github.io/Notes on work projects (in Chinese).html
@@ -345,7 +345,9 @@ if (!isInIframe &amp;&amp; !ua.toLowerCase().match(/micromessenger|android|iphon
 <li>移动端携带上一步的临时 token 确认登录，服务端校对完成后，会更新二维码状态，并且给 PC 端一个正式的 token，后续 PC 端就是持有这个 token 访问服务端。</li>
 </ol>
 <p>常规的密码存储：</p>
-<p>如果直接对密码进行散列后存储，那么黑客可以对一个已知密码进行散列，然后通过对比散列值可以知道使用特定密码的用户有哪些。密码加盐可以一定程度上解决这一问题，salt 值是由系统随机生成的，并且只有系统知道，即便两个用户使用了同一个密码，由于系统为它们生成的 salt 值不同，他们的散列值也是不同的。将 salt 值和用户密码连接到一起，对连接后的值进行散列，把这个散列值和它对应的 salt 值都要存到数据库中，用于登录时校验匹配。比如项目中可以使用 <a href="https://github.com/kelektiv/node.bcrypt.js">bcrypt</a>，将 salt 和哈希后的密码拼到一起存到数据库。</p>
+<p>A Rainbow Table is a precomputed table of hashes and their inputs. This allows an attacker to simply look up the hash in the table to find the input. This means that if an attacker gets access to your database, they can simply look up the hashes to find the passwords.</p>
+<p>To protect against this, password hashing algorithms use a salt. A salt is a random string that is added to the password before hashing. This means that even if two users have the same password, their hashes will be different. This makes it impossible for an attacker to use a rainbow table to find the passwords. In fact a common practice is to simply append the salt to the hash. This will make it so that the salt is always available when you need to verify the password.</p>
+<p>A great library for generating bcrypt hashes is <a href="https://github.com/dcodeIO/bcrypt.js">bcryptjs</a> which will generate a random salt for you. This means that you don't need to worry about generating a salt and you can simply store the whole thing as is. Then when the user logs in, you provide the stored hash and the password they provide to bcryptjs's <code>compare</code> function will verify the password is correct.</p>
 </blockquote>
 <h3>微信网页授权</h3>
 <p>申请公众号/小程序的时候，都有一个 APPID 作为当前账号的标识，OpenID 就是用户在某一公众平台下的标识（用户微信号和公众平台的 APPID 两个数据加密得到的字符串）。如果开发者拥有多个应用，可以通过获取用户基本信息中的 UnionID 来区分用户的唯一性，因为同一用户，在同一微信开放平台下的不同应用，UnionID 应是相同的，代表同一个人，当然前提是各个公众平台需要先绑定到同一个开放平台。OpenID 同一用户同一应用唯一，UnionID 同一用户不同应用唯一，获取用户的 OpenID 是无需用户同意的，获取用户的基本信息则需要用户同意。</p>
